--- a/index.html
+++ b/index.html
@@ -4,9 +4,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NatGeo</title>
+    <script src="https://kit.fontawesome.com/337be747ec.js" crossorigin="anonymous"></script>
+    <title>National Geographics</title>
 </head>
 <body>
-    <h1>national geographics</h1>
+    <nav>
+        <img src="img/ng-logo-2fl.webp" alt="Natgeo logo">
+<a href="#">login</a>
+<a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+<a href="#">newsletter</a>
+<a href="#">subscribe</a>
+<a href="#">menu</a>
+<a href="#"><i class="fa-solid fa-angle-down"></i></a>
+    </nav>
+    <header>
+<h1>Latest Stories</h1>
+<p>subscribe for full access to read stories from National Geographics</p>
+<div class="line"></div>
+    </header>
+    <main>
+       <section>
+           <!--add the image-->
+     <img src="img/photography.webp">
+<h3>Photography <span>photo of the day</span></h3>
+<p>31 archival photos that will ignite your curinsity</p>
+<p> see photos</p>
+    </section>
+
+<section>
+    <img src="img/magazine.webp">
+<h3>Magazine <span>proof</span></h3>
+<p>These artist transform garbage into garbs to take a stand</p>
+<p><i class="fa-solid fa-bars"></i>read</p>
+</section>
+<section>
+ <h2>Today's picks </h2>
+    <div>
+        <!---add image-->
+        <img src="img/science.webp">
+        <h3>Science</h3>
+        <p>How drugmakers come up with names like Viagra and Lunesta</p>
+        <p><i class="fa-solid fa-bars"></i>read</p>
+    </div>
+
+    <div>
+     <img src="img/travel.webp">
+     <h3>Travel <span>Planet possible</span></h3>
+     <p>These indie theaters shine a spotlight on Asian storie</p>
+     <p><i class="fa-solid fa-bars"></i>Sread</p>
+    </div>
+
+<div>
+    <img src="img/animals.jpg">
+    <h3>animals</h3>
+    <p>Monarchs may be doing better than thought, study suggest</p>
+    <p><i class="fa-solid fa-bars">read</i></p>
+</div>
+<div>
+    <img src="img/history-culture.webp">
+           <h3>History & Culture</h3>
+           <p>How a stranger's kindness helped give us the Big Bang theory.</p>
+           <p><i class="fa-solid fa-bars"></i> read</p>
+       </section>
+</div>
+</section>
+
+    </main>
 </body>
 </html>
