--- a/index.html
+++ b/index.html
@@ -4,24 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="mystyle.css">
     <script src="https://kit.fontawesome.com/337be747ec.js" crossorigin="anonymous"></script>
     <title>National Geographics</title>
+    <link rel="icon" type="image/x-icon" href="img//ng-border.png" class="frame-logo">
 </head>
 <body>
-    <nav>
-        <img src="img/ng-logo-2fl.webp" alt="Natgeo logo">
-<a href="#">login</a>
-<a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-<a href="#">newsletter</a>
-<a href="#">subscribe</a>
-<a href="#">menu</a>
-<a href="#"><i class="fa-solid fa-angle-down"></i></a>
-    </nav>
+    <nav class="menu">
+        <div>
+        <img class="complete-logo" src="img/ng-logo-2fl.webp" alt="frame">
+        <img class="frame-logo" src="img/ng-border.png">
+        </div>
+
+ <div class="link-container">
+<a class="link-login"href="#">login</a>
+<a class="link-search"href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+<a class="link-news"href="#">newsletter</a>
+<a class="link-subs" href="#">subscribe</a>
+<a class="link-menu" href="#">menu</a>
+<a class="link-arrows"><i class="fa-solid fa-angles-down"></i></a>
+</div>
+
+</nav>
+
+
     <header>
-<h1>Latest Stories</h1>
-<p>subscribe for full access to read stories from National Geographics</p>
+<h1>LATEST STORIES</h1>
+<p><u class="line">Subscribe</u> for full access to read stories from National Geographic</p>
+<p><u class="line2">HEY</u></p> 
+
 <div class="line"></div>
     </header>
+
     <main>
        <section>
            <!--add the image-->
@@ -51,7 +65,7 @@
      <img src="img/travel.webp">
      <h3>Travel <span>Planet possible</span></h3>
      <p>These indie theaters shine a spotlight on Asian storie</p>
-     <p><i class="fa-solid fa-bars"></i>Sread</p>
+     <p><i class="fa-solid fa-bars"></i>read</p>
     </div>
 
 <div>
